sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:19: error: type mismatch;
 found   : Int
 required: Boolean
		if(fini)
                   ^