sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() 
{
	var fini = 0
	
	for(i <- getNombreValeurs()-2 to 0 by (-1))
	{
		for(j <- 0 to i)
		{
			fini = 1
			
			if(plusPetit(j+1,j))
			{
				echange(j,j+1)
				fini = 0
			}
		}

		if(fini)
			return
	}
}
